Melhorando as rotas

--- a/src/main/resources/templates/editarpost.html
+++ b/src/main/resources/templates/editarpost.html
@@ -21,7 +21,7 @@
 <body>
 	<header>
 		<nav class="navbar navbar-light bg-light">
-    		<a href="/posts"><span class="navbar-brand mb-0 h1">Blog Do Carlos</span></a>
+    		<a href="/"><span class="navbar-brand mb-0 h1">Blog Do Carlos</span></a>
 		</nav>
 	</header>
 	
@@ -31,7 +31,7 @@
 			
 			<nav aria-label="breadcrumb">
   				<ol class="breadcrumb">
-    				<li class="breadcrumb-item" aria-current="page"><a href="/posts">Posts</a></li>
+    				<li class="breadcrumb-item" aria-current="page"><a href="/">Posts</a></li>
     				<li class="breadcrumb-item active" aria-current="page">Editar Post</li>
   				</ol>
 			</nav>
@@ -57,7 +57,7 @@
 				
 				<br>
 				<button type="submit" class="btn btn-primary" style="margin-top: 10px">Salvar</button>
-				<a href="/posts" class="btn btn-danger" role="button" style="margin-top: 10px">Cancelar</a>
+				<a href="/" class="btn btn-danger" role="button" style="margin-top: 10px">Cancelar</a>
 				<br>
 				
 			</form>
