--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -13,7 +13,7 @@
 <body>
 	<header>
 		<nav class="navbar navbar-light bg-light">
-    		<a href="/posts"><span class="navbar-brand mb-0 h1">Blog Do Carlos</span></a>
+    		<a href="/"><span class="navbar-brand mb-0 h1">Blog Do Carlos</span></a>
     		<a href="/novopost"><span class="btn btn-primary">Criar Post</span></a>
 		</nav>
 	</header>
