--- a/src/main/resources/templates/postdetlhado.html
+++ b/src/main/resources/templates/postdetlhado.html
@@ -4,7 +4,7 @@
 
 <head>
 	<nav class="navbar navbar-light bg-light">
-    	<a href="/posts"><span class="navbar-brand mb-0 h1">Blog Do Carlos</span></a>
+    	<a href="/"><span class="navbar-brand mb-0 h1">Blog Do Carlos</span></a>
 	</nav>
 	<!-- CSS -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -24,7 +24,7 @@
 			
 			<nav aria-label="breadcrumb">
   				<ol class="breadcrumb">
-    				<li class="breadcrumb-item active" aria-current="page"><a href="/posts">Posts</a></li>
+    				<li class="breadcrumb-item active" aria-current="page"><a href="/">Posts</a></li>
     				<li class="breadcrumb-item active" aria-current="page">Post</li>
   				</ol>
 			</nav>
